--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/sahib-musharraf/" class="btn btn-primary py-3 px-4" target="_blank">LinkeDin</a> 
-							<a href="https://github.com/Sahib-Musharraf" class="btn btn-white btn-outline-white py-3 px-4" target="_blank">RESUME</a></p>
+							<a href="https://drive.google.com/file/d/1Xctz2a2YyD8HERZvzs8wRLjYW1TB2srb/view?usp=sharing" class="btn btn-white btn-outline-white py-3 px-4" target="_blank">RESUME</a></p>
 		            </div>
 		          </div>
 	        	</div>
